fixed z-index of carousel controls

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -26,7 +26,7 @@ h3 {
 
 .carousel {
     margin:auto;
-    z-index:-1; 
+    z-index:-0.5; 
 }
 .carousel-item {
     z-index: -1;
